RESOLVED FIXED252976
[margin-trim][LegacyLineLayout] Floats trimmed margins should not contribute to block container's intrinsic size contribution
https://bugs.webkit.org/show_bug.cgi?id=252976
Summary [margin-trim][LegacyLineLayout] Floats trimmed margins should not contribute ...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-02-26 22:07:44 PST
Sammy Gill
Comment 2 2023-02-27 08:40:26 PST
EWS
Comment 3 2023-02-27 14:04:49 PST
Committed 260906@main (35416b6b8ce4): <https://commits.webkit.org/260906@main> Reviewed commits have been landed. Closing PR #10731 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.