Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp
@@ -369,6 +369,9 @@ static OptionSet<AvoidanceReason> canUseForChild(const RenderBlockFlow& flow, co
             if (renderer.isFloating() && !renderer.parent()->style().isHorizontalWritingMode())
                 return false;
 #endif
+            // Floats where the block container specifies margin-tirm need IFC implementation (geometry adjustment)
+            if (!flow.style().marginTrim().isEmpty())
+                return false;
             if (renderer.isOutOfFlowPositioned()) {
                 if (!renderer.parent()->style().isLeftToRightDirection())
                     return false;
